--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
   height: 60px;
   background-color: rgb(217, 217, 217);
   border: 1px solid black;
-  text-align: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .hide {
   display: none;
